# ai4science

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_experiment.py
.tmp_effective_configs/matbench/: matbench__flan_t5_large.yaml  matbench__gpt-5.2-chat.yaml  matbench__gpt4o_mini.yaml
.tmp_effective_configs/pubmedqa/: pubmedqa__deepseek_chat.yaml  pubmedqa__flan_t5_base.yaml  pubmedqa__flan_t5_large.yaml  pubmedqa__gpt-5.2-chat.yaml  pubmedqa__gpt4o_mini.yaml  pubmedqa__llama31_8b_instruct.yaml  pubmedqa__llama33_70b.yaml  pubmedqa__mistral_7b_instruct.yaml  pubmedqa__mistral_large.yaml
.tmp_effective_configs/scifact/: scifact__deepseek_chat.yaml  scifact__flan_t5_base.yaml  scifact__flan_t5_large.yaml  scifact__gpt-5.2-chat.yaml  scifact__gpt4o_mini.yaml  scifact__llama31_8b_instruct.yaml  scifact__llama33_70b.yaml  scifact__mistral_7b_instruct.yaml  scifact__mistral_large.yaml  scifact__palm2_chat_bison.yaml
.tmp_effective_configs/scifact_open/: scifact_open__deepseek_chat.yaml  scifact_open__flan_t5_base.yaml  scifact_open__flan_t5_large.yaml  scifact_open__gpt4o_mini.yaml  scifact_open__llama31_8b_instruct.yaml  scifact_open__mistral_7b_instruct.yaml
configs/: matbench.yaml  pubmedqa.yaml  scifact.yaml  scifact_open.yaml
scripts/: get_pubmedqa.md  get_scifact.md  get_scifact_open.md  run_matrix.py
src/validity_sci/: cli.py  config.py  io.py  metrics.py  utils.py
src/validity_sci.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/validity_sci/datasets/: matbench.py  pubmedqa.py  scifact.py  scifact_open.py
(+8 files in other folders)
